modif materialize.css pour table = fix not showing all days. lil css modif. Basic datepicker workin

--- a/app/css/main.less
+++ b/app/css/main.less
@@ -7,6 +7,10 @@
 @blue: #3f30c9;
 @black: #3e2b2b;
 
+.md-datepicker-triangle-button.md-button.md-icon-button {
+  top: 0;
+}
+
 #monLogo {
     margin-left: 150px;
     width: 200px;
